tests/ucc/type/bad/void-as-var-type-1.c
int f(int a, void i)
{
    return 0;
}

int main(void)
{
    return 0;
}
